plugins {
    id 'org.springframework.boot' version '2.7.4'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
    id 'jacoco'
}

group = 'pl.newsler'
version = '0.0.1'
sourceCompatibility = '17'

jar {
    archiveName 'newsler.jar'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    google()
}

jacoco {
    toolVersion = "0.8.8"
    reportsDirectory = layout.buildDirectory.dir('test-coverage-results')
}

dependencies {
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-jersey:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'

    implementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.auth0:java-jwt:4.2.1'
    implementation 'org.yaml:snakeyaml:1.33'
    implementation 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'

    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
    runtimeOnly 'com.h2database:h2'

    testAnnotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'

    testImplementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
    testImplementation 'org.springframework.security:spring-security-test:5.7.5'
    testImplementation 'com.squareup.retrofit2:converter-gson:2.1.0'
    testImplementation 'com.squareup.retrofit2:retrofit:2.9.0'
    testImplementation 'com.google.code.gson:gson:2.10'
    testImplementation 'org.projectlombok:lombok'
    testImplementation 'org.yaml:snakeyaml:1.33'

}

test {
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('test-coverage-results/html')
    }
    dependsOn test
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.85
            }
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
